parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    array
    comment1
    comment2
    dolar
    not
    pop
    push
    salto
    tab

Grammar

Rule 0     S' -> INICIO
Rule 1     INICIO -> INSTRUCCIONES2
Rule 2     INSTRUCCIONES2 -> INSTRUCCION2 puntocoma INSTRUCCIONES2
Rule 3     INSTRUCCIONES2 -> INSTRUCCION2 puntocoma
Rule 4     INSTRUCCION2 -> IMPRIMIR
Rule 5     INSTRUCCION2 -> FUNCIONES
Rule 6     INSTRUCCION2 -> SCOPE
Rule 7     INSTRUCCION2 -> DECLFUNC
Rule 8     INSTRUCCION2 -> LLAMADAFUNC
Rule 9     INSTRUCCION2 -> TRANSF
Rule 10    INSTRUCCION2 -> SOPERACIONES
Rule 11    INSTRUCCION2 -> TYPESTRUCT
Rule 12    INSTRUCCIONES -> INSTRUCCION puntocoma INSTRUCCIONES
Rule 13    INSTRUCCIONES -> INSTRUCCION puntocoma
Rule 14    INSTRUCCION -> IMPRIMIR
Rule 15    INSTRUCCION -> FUNCIONES
Rule 16    INSTRUCCION -> SCOPE
Rule 17    INSTRUCCION -> DECLFUNC
Rule 18    INSTRUCCION -> LLAMADAFUNC
Rule 19    INSTRUCCION -> TRANSF
Rule 20    INSTRUCCION -> SOPERACIONES
Rule 21    INSTRUCCION -> TYPESTRUCT
Rule 22    SOPERACIONES -> SOPSTRING
Rule 23    SOPERACIONES -> SOPNATIV
Rule 24    SOPERACIONES -> OPID
Rule 25    SOPERACIONES -> SOPLOG
Rule 26    SOPERACIONES -> DECLNATIV
Rule 27    TIPOS -> int64
Rule 28    TIPOS -> float64
Rule 29    TIPOS -> bool
Rule 30    TIPOS -> char
Rule 31    TIPOS -> string
Rule 32    TIPOS -> id
Rule 33    ALGO -> SOPERACIONES
Rule 34    ALGO -> ARREGLO
Rule 35    ALGO -> LLAMADARR
Rule 36    ALGO -> STRUCTINI
Rule 37    ALGO -> id
Rule 38    TYPESTRUCT -> STRUCT
Rule 39    TYPESTRUCT -> mutable STRUCT
Rule 40    STRUCT -> struct id ATRIBUTOS end
Rule 41    ATRIBUTOS -> ATRIBUTO puntocoma ATRIBUTOS
Rule 42    ATRIBUTOS -> ATRIBUTO puntocoma
Rule 43    ATRIBUTO -> id dos_dospuntos TIPOS
Rule 44    ATRIBUTO -> id
Rule 45    STRUCTINI -> id parentesisa PARAMSFUNC parentesisc
Rule 46    STRUCTASIGN -> id
Rule 47    STRUCTASIGNS -> STRUCTASIGN punto STRUCTASIGNS
Rule 48    STRUCTASIGNS -> STRUCTASIGN
Rule 49    ARREGLO -> corchetea ARRCONT corchetec
Rule 50    ARRCONT -> ARRCONT coma ARRCONT
Rule 51    ARRCONT -> ALGO
Rule 52    ARRCONT -> <empty>
Rule 53    LLAMADARR -> id INDARS
Rule 54    INDARS -> INDAR corchetec INDARS
Rule 55    INDARS -> INDAR corchetec
Rule 56    INDAR -> corchetea id
Rule 57    INDAR -> corchetea OPID
Rule 58    DECLFUNC -> function id parentesisa PARAMS parentesisc INSTRUCCIONES end
Rule 59    PARAMS -> PARAMS coma PARAMS
Rule 60    PARAMS -> id
Rule 61    PARAMS -> id dos_dospuntos TIPOS
Rule 62    LLAMADAFUNC -> id parentesisa PARAMSFUNC parentesisc
Rule 63    PARAMSFUNC -> PARAMSFUNC coma PARAMSFUNC
Rule 64    PARAMSFUNC -> ALGO
Rule 65    PARAMSFUNC -> <empty>
Rule 66    SCOPE -> global ASIGNACION
Rule 67    SCOPE -> local ASIGNACION
Rule 68    SCOPE -> ASIGNACION
Rule 69    NOMBREALGO -> LLAMADARR
Rule 70    NOMBREALGO -> STRUCTASIGNS
Rule 71    NOMBREALGO -> id
Rule 72    ASIGNACION -> NOMBREALGO igual SOPSTRING
Rule 73    ASIGNACION -> NOMBREALGO igual ALGO
Rule 74    ASIGNACION -> NOMBREALGO igual ALGO dos_dospuntos TIPOS
Rule 75    ASIGNACION -> NOMBREALGO igual nothing
Rule 76    FUNCIONES -> FIF
Rule 77    FUNCIONES -> FWHILE
Rule 78    FUNCIONES -> FFOR
Rule 79    TRANSF -> break
Rule 80    TRANSF -> continue
Rule 81    TRANSF -> return
Rule 82    TRANSF -> return ALGO
Rule 83    FFOR -> for id in RANGO INSTRUCCIONES end
Rule 84    RANGO -> OPID dospuntos OPID
Rule 85    RANGO -> cadena
Rule 86    FWHILE -> while SOPLOG INSTRUCCIONES end
Rule 87    FIF -> if SOPLOG INSTRUCCIONES FELSEIF
Rule 88    FIF -> if SOPLOG INSTRUCCIONES FELSE
Rule 89    FIF -> if SOPLOG INSTRUCCIONES end
Rule 90    FELSEIF -> elseif SOPLOG INSTRUCCIONES FELSEIF
Rule 91    FELSEIF -> elseif SOPLOG INSTRUCCIONES FELSE
Rule 92    FELSEIF -> elseif SOPLOG INSTRUCCIONES end
Rule 93    FELSE -> else INSTRUCCIONES end
Rule 94    FIFUNI -> SOPLOG interrogacionc ALGO dospuntos ALGO
Rule 95    IMPRIMIR -> println parentesisa SCONTPRNT parentesisc
Rule 96    IMPRIMIR -> print parentesisa SCONTPRNT parentesisc
Rule 97    SCONTPRNT -> SCONTPRNT coma SCONTPRNT
Rule 98    SCONTPRNT -> ALGO
Rule 99    SCONTPRNT -> FIFUNI
Rule 100   OPID -> OPID mas OPID
Rule 101   OPID -> OPID menos OPID
Rule 102   OPID -> OPID asterisco OPID
Rule 103   OPID -> OPID dividido OPID
Rule 104   OPID -> OPID modulo OPID
Rule 105   OPID -> OPID elevado OPID
Rule 106   OPID -> menos OPID
Rule 107   OPID -> parentesisa OPID parentesisc
Rule 108   OPID -> NATMATH parentesisa OPID parentesisc
Rule 109   OPID -> log parentesisa OPID coma OPID parentesisc
Rule 110   OPID -> int
Rule 111   OPID -> flotante
Rule 112   OPID -> id
Rule 113   OPID -> cadena
Rule 114   OPID -> caracter
Rule 115   SOPLOG -> SOPLOG and SOPLOG
Rule 116   SOPLOG -> SOPLOG or SOPLOG
Rule 117   SOPLOG -> SOPLOG mayorque SOPLOG
Rule 118   SOPLOG -> SOPLOG menorque SOPLOG
Rule 119   SOPLOG -> SOPLOG mayoriwal SOPLOG
Rule 120   SOPLOG -> SOPLOG menoriwal SOPLOG
Rule 121   SOPLOG -> SOPLOG iwaliwal SOPLOG
Rule 122   SOPLOG -> SOPLOG distintoque SOPLOG
Rule 123   SOPLOG -> parentesisa SOPLOG parentesisc
Rule 124   SOPLOG -> OPID
Rule 125   SOPLOG -> true
Rule 126   SOPLOG -> false
Rule 127   SOPLOG -> int
Rule 128   SOPLOG -> flotante
Rule 129   SOPLOG -> cadena
Rule 130   SOPLOG -> caracter
Rule 131   SOPLOG -> id
Rule 132   SOPNATIV -> uppercase parentesisa SOPN parentesisc
Rule 133   SOPNATIV -> lowercase parentesisa SOPN parentesisc
Rule 134   SOPNATIV -> length parentesisa SOPN parentesisc
Rule 135   SOPN -> SOPSTRING
Rule 136   DECLNATIV -> parse parentesisa TIPOS coma ALGO parentesisc
Rule 137   DECLNATIV -> trunc parentesisa int64 coma flotante parentesisc
Rule 138   DECLNATIV -> float parentesisa int parentesisc
Rule 139   DECLNATIV -> string parentesisa ALGO parentesisc
Rule 140   DECLNATIV -> typeof parentesisa ALGO parentesisc
Rule 141   SOPSTRING -> SOPSTRING asterisco SOPSTRING
Rule 142   SOPSTRING -> SOPSTRING elevado int
Rule 143   SOPSTRING -> SOPSTRING elevado id
Rule 144   SOPSTRING -> cadena
Rule 145   SOPSTRING -> caracter
Rule 146   SOPSTRING -> id
Rule 147   SOPSTRING -> SOPNATIV
Rule 148   NATMATH -> log10
Rule 149   NATMATH -> sin
Rule 150   NATMATH -> cos
Rule 151   NATMATH -> tan
Rule 152   NATMATH -> sqrt

Terminals, with rules where they appear

and                  : 115
array                : 
asterisco            : 102 141
bool                 : 29
break                : 79
cadena               : 85 113 129 144
caracter             : 114 130 145
char                 : 30
coma                 : 50 59 63 97 109 136 137
comment1             : 
comment2             : 
continue             : 80
corchetea            : 49 56 57
corchetec            : 49 54 55
cos                  : 150
distintoque          : 122
dividido             : 103
dolar                : 
dos_dospuntos        : 43 61 74
dospuntos            : 84 94
elevado              : 105 142 143
else                 : 93
elseif               : 90 91 92
end                  : 40 58 83 86 89 92 93
error                : 
false                : 126
float                : 138
float64              : 28
flotante             : 111 128 137
for                  : 83
function             : 58
global               : 66
id                   : 32 37 40 43 44 45 46 53 56 58 60 61 62 71 83 112 131 143 146
if                   : 87 88 89
igual                : 72 73 74 75
in                   : 83
int                  : 110 127 138 142
int64                : 27 137
interrogacionc       : 94
iwaliwal             : 121
length               : 134
local                : 67
log                  : 109
log10                : 148
lowercase            : 133
mas                  : 100
mayoriwal            : 119
mayorque             : 117
menoriwal            : 120
menorque             : 118
menos                : 101 106
modulo               : 104
mutable              : 39
not                  : 
nothing              : 75
or                   : 116
parentesisa          : 45 58 62 95 96 107 108 109 123 132 133 134 136 137 138 139 140
parentesisc          : 45 58 62 95 96 107 108 109 123 132 133 134 136 137 138 139 140
parse                : 136
pop                  : 
print                : 96
println              : 95
punto                : 47
puntocoma            : 2 3 12 13 41 42
push                 : 
return               : 81 82
salto                : 
sin                  : 149
sqrt                 : 152
string               : 31 139
struct               : 40
tab                  : 
tan                  : 151
true                 : 125
trunc                : 137
typeof               : 140
uppercase            : 132
while                : 86

Nonterminals, with rules where they appear

ALGO                 : 51 64 73 74 82 94 94 98 136 139 140
ARRCONT              : 49 50 50
ARREGLO              : 34
ASIGNACION           : 66 67 68
ATRIBUTO             : 41 42
ATRIBUTOS            : 40 41
DECLFUNC             : 7 17
DECLNATIV            : 26
FELSE                : 88 91
FELSEIF              : 87 90
FFOR                 : 78
FIF                  : 76
FIFUNI               : 99
FUNCIONES            : 5 15
FWHILE               : 77
IMPRIMIR             : 4 14
INDAR                : 54 55
INDARS               : 53 54
INICIO               : 0
INSTRUCCION          : 12 13
INSTRUCCION2         : 2 3
INSTRUCCIONES        : 12 58 83 86 87 88 89 90 91 92 93
INSTRUCCIONES2       : 1 2
LLAMADAFUNC          : 8 18
LLAMADARR            : 35 69
NATMATH              : 108
NOMBREALGO           : 72 73 74 75
OPID                 : 24 57 84 84 100 100 101 101 102 102 103 103 104 104 105 105 106 107 108 109 109 124
PARAMS               : 58 59 59
PARAMSFUNC           : 45 62 63 63
RANGO                : 83
SCONTPRNT            : 95 96 97 97
SCOPE                : 6 16
SOPERACIONES         : 10 20 33
SOPLOG               : 25 86 87 88 89 90 91 92 94 115 115 116 116 117 117 118 118 119 119 120 120 121 121 122 122 123
SOPN                 : 132 133 134
SOPNATIV             : 23 147
SOPSTRING            : 22 72 135 141 141 142 143
STRUCT               : 38 39
STRUCTASIGN          : 47 48
STRUCTASIGNS         : 47 70
STRUCTINI            : 36
TIPOS                : 43 61 74 136
TRANSF               : 9 19
TYPESTRUCT           : 11 21

Parsing method: LALR

state 0

    (0) S' -> . INICIO
    (1) INICIO -> . INSTRUCCIONES2
    (2) INSTRUCCIONES2 -> . INSTRUCCION2 puntocoma INSTRUCCIONES2
    (3) INSTRUCCIONES2 -> . INSTRUCCION2 puntocoma
    (4) INSTRUCCION2 -> . IMPRIMIR
    (5) INSTRUCCION2 -> . FUNCIONES
    (6) INSTRUCCION2 -> . SCOPE
    (7) INSTRUCCION2 -> . DECLFUNC
    (8) INSTRUCCION2 -> . LLAMADAFUNC
    (9) INSTRUCCION2 -> . TRANSF
    (10) INSTRUCCION2 -> . SOPERACIONES
    (11) INSTRUCCION2 -> . TYPESTRUCT
    (95) IMPRIMIR -> . println parentesisa SCONTPRNT parentesisc
    (96) IMPRIMIR -> . print parentesisa SCONTPRNT parentesisc
    (76) FUNCIONES -> . FIF
    (77) FUNCIONES -> . FWHILE
    (78) FUNCIONES -> . FFOR
    (66) SCOPE -> . global ASIGNACION
    (67) SCOPE -> . local ASIGNACION
    (68) SCOPE -> . ASIGNACION
    (58) DECLFUNC -> . function id parentesisa PARAMS parentesisc INSTRUCCIONES end
    (62) LLAMADAFUNC -> . id parentesisa PARAMSFUNC parentesisc
    (79) TRANSF -> . break
    (80) TRANSF -> . continue
    (81) TRANSF -> . return
    (82) TRANSF -> . return ALGO
    (22) SOPERACIONES -> . SOPSTRING
    (23) SOPERACIONES -> . SOPNATIV
    (24) SOPERACIONES -> . OPID
    (25) SOPERACIONES -> . SOPLOG
    (26) SOPERACIONES -> . DECLNATIV
    (38) TYPESTRUCT -> . STRUCT
    (39) TYPESTRUCT -> . mutable STRUCT
    (87) FIF -> . if SOPLOG INSTRUCCIONES FELSEIF
    (88) FIF -> . if SOPLOG INSTRUCCIONES FELSE
    (89) FIF -> . if SOPLOG INSTRUCCIONES end
    (86) FWHILE -> . while SOPLOG INSTRUCCIONES end
    (83) FFOR -> . for id in RANGO INSTRUCCIONES end
    (72) ASIGNACION -> . NOMBREALGO igual SOPSTRING
    (73) ASIGNACION -> . NOMBREALGO igual ALGO
    (74) ASIGNACION -> . NOMBREALGO igual ALGO dos_dospuntos TIPOS
    (75) ASIGNACION -> . NOMBREALGO igual nothing
    (141) SOPSTRING -> . SOPSTRING asterisco SOPSTRING
    (142) SOPSTRING -> . SOPSTRING elevado int
    (143) SOPSTRING -> . SOPSTRING elevado id
    (144) SOPSTRING -> . cadena
    (145) SOPSTRING -> . caracter
    (146) SOPSTRING -> . id
    (147) SOPSTRING -> . SOPNATIV
    (132) SOPNATIV -> . uppercase parentesisa SOPN parentesisc
    (133) SOPNATIV -> . lowercase parentesisa SOPN parentesisc
    (134) SOPNATIV -> . length parentesisa SOPN parentesisc
    (100) OPID -> . OPID mas OPID
    (101) OPID -> . OPID menos OPID
    (102) OPID -> . OPID asterisco OPID
    (103) OPID -> . OPID dividido OPID
    (104) OPID -> . OPID modulo OPID
    (105) OPID -> . OPID elevado OPID
    (106) OPID -> . menos OPID
    (107) OPID -> . parentesisa OPID parentesisc
    (108) OPID -> . NATMATH parentesisa OPID parentesisc
    (109) OPID -> . log parentesisa OPID coma OPID parentesisc
    (110) OPID -> . int
    (111) OPID -> . flotante
    (112) OPID -> . id
    (113) OPID -> . cadena
    (114) OPID -> . caracter
    (115) SOPLOG -> . SOPLOG and SOPLOG
    (116) SOPLOG -> . SOPLOG or SOPLOG
    (117) SOPLOG -> . SOPLOG mayorque SOPLOG
    (118) SOPLOG -> . SOPLOG menorque SOPLOG
    (119) SOPLOG -> . SOPLOG mayoriwal SOPLOG
    (120) SOPLOG -> . SOPLOG menoriwal SOPLOG
    (121) SOPLOG -> . SOPLOG iwaliwal SOPLOG
    (122) SOPLOG -> . SOPLOG distintoque SOPLOG
    (123) SOPLOG -> . parentesisa SOPLOG parentesisc
    (124) SOPLOG -> . OPID
    (125) SOPLOG -> . true
    (126) SOPLOG -> . false
    (127) SOPLOG -> . int
    (128) SOPLOG -> . flotante
    (129) SOPLOG -> . cadena
    (130) SOPLOG -> . caracter
    (131) SOPLOG -> . id
    (136) DECLNATIV -> . parse parentesisa TIPOS coma ALGO parentesisc
    (137) DECLNATIV -> . trunc parentesisa int64 coma flotante parentesisc
    (138) DECLNATIV -> . float parentesisa int parentesisc
    (139) DECLNATIV -> . string parentesisa ALGO parentesisc
    (140) DECLNATIV -> . typeof parentesisa ALGO parentesisc
    (40) STRUCT -> . struct id ATRIBUTOS end
    (69) NOMBREALGO -> . LLAMADARR
    (70) NOMBREALGO -> . STRUCTASIGNS
    (71) NOMBREALGO -> . id
    (148) NATMATH -> . log10
    (149) NATMATH -> . sin
    (150) NATMATH -> . cos
    (151) NATMATH -> . tan
    (152) NATMATH -> . sqrt
    (53) LLAMADARR -> . id INDARS
    (47) STRUCTASIGNS -> . STRUCTASIGN punto STRUCTASIGNS
    (48) STRUCTASIGNS -> . STRUCTASIGN
    (46) STRUCTASIGN -> . id

    println         shift and go to state 12
    print           shift and go to state 14
    global          shift and go to state 18
    local           shift and go to state 20
    function        shift and go to state 21
    id              shift and go to state 22
    break           shift and go to state 23
    continue        shift and go to state 24
    return          shift and go to state 25
    mutable         shift and go to state 32
    if              shift and go to state 33
    while           shift and go to state 34
    for             shift and go to state 35
    cadena          shift and go to state 38
    caracter        shift and go to state 39
    uppercase       shift and go to state 40
    lowercase       shift and go to state 41
    length          shift and go to state 42
    menos           shift and go to state 43
    parentesisa     shift and go to state 13
    log             shift and go to state 45
    int             shift and go to state 37
    flotante        shift and go to state 46
    true            shift and go to state 47
    false           shift and go to state 48
    parse           shift and go to state 49
    trunc           shift and go to state 50
    float           shift and go to state 51
    string          shift and go to state 52
    typeof          shift and go to state 53
    struct          shift and go to state 54
    log10           shift and go to state 57
    sin             shift and go to state 58
    cos             shift and go to state 59
    tan             shift and go to state 60
    sqrt            shift and go to state 61

    INICIO                         shift and go to state 1
    INSTRUCCIONES2                 shift and go to state 2
    INSTRUCCION2                   shift and go to state 3
    IMPRIMIR                       shift and go to state 4
    FUNCIONES                      shift and go to state 5
    SCOPE                          shift and go to state 6
    DECLFUNC                       shift and go to state 7
    LLAMADAFUNC                    shift and go to state 8
    TRANSF                         shift and go to state 9
    SOPERACIONES                   shift and go to state 10
    TYPESTRUCT                     shift and go to state 11
    FIF                            shift and go to state 15
    FWHILE                         shift and go to state 16
    FFOR                           shift and go to state 17
    ASIGNACION                     shift and go to state 19
    SOPSTRING                      shift and go to state 26
    SOPNATIV                       shift and go to state 27
    OPID                           shift and go to state 28
    SOPLOG                         shift and go to state 29
    DECLNATIV                      shift and go to state 30
    STRUCT                         shift and go to state 31
    NOMBREALGO                     shift and go to state 36
    NATMATH                        shift and go to state 44
    LLAMADARR                      shift and go to state 55
    STRUCTASIGNS                   shift and go to state 56
    STRUCTASIGN                    shift and go to state 62

state 1

    (0) S' -> INICIO .



state 2

    (1) INICIO -> INSTRUCCIONES2 .

    $end            reduce using rule 1 (INICIO -> INSTRUCCIONES2 .)


state 3

    (2) INSTRUCCIONES2 -> INSTRUCCION2 . puntocoma INSTRUCCIONES2
    (3) INSTRUCCIONES2 -> INSTRUCCION2 . puntocoma

    puntocoma       shift and go to state 63


state 4

    (4) INSTRUCCION2 -> IMPRIMIR .

    puntocoma       reduce using rule 4 (INSTRUCCION2 -> IMPRIMIR .)


state 5

    (5) INSTRUCCION2 -> FUNCIONES .

    puntocoma       reduce using rule 5 (INSTRUCCION2 -> FUNCIONES .)


state 6

    (6) INSTRUCCION2 -> SCOPE .

    puntocoma       reduce using rule 6 (INSTRUCCION2 -> SCOPE .)


state 7

    (7) INSTRUCCION2 -> DECLFUNC .

    puntocoma       reduce using rule 7 (INSTRUCCION2 -> DECLFUNC .)


state 8

    (8) INSTRUCCION2 -> LLAMADAFUNC .

    puntocoma       reduce using rule 8 (INSTRUCCION2 -> LLAMADAFUNC .)


state 9

    (9) INSTRUCCION2 -> TRANSF .

    puntocoma       reduce using rule 9 (INSTRUCCION2 -> TRANSF .)


state 10

    (10) INSTRUCCION2 -> SOPERACIONES .

    puntocoma       reduce using rule 10 (INSTRUCCION2 -> SOPERACIONES .)


state 11

    (11) INSTRUCCION2 -> TYPESTRUCT .

    puntocoma       reduce using rule 11 (INSTRUCCION2 -> TYPESTRUCT .)


state 12

    (95) IMPRIMIR -> println . parentesisa SCONTPRNT parentesisc

    parentesisa     shift and go to state 64


state 13

    (107) OPID -> parentesisa . OPID parentesisc
    (123) SOPLOG -> parentesisa . SOPLOG parentesisc
    (100) OPID -> . OPID mas OPID
    (101) OPID -> . OPID menos OPID
    (102) OPID -> . OPID asterisco OPID
    (103) OPID -> . OPID dividido OPID
    (104) OPID -> . OPID modulo OPID
    (105) OPID -> . OPID elevado OPID
    (106) OPID -> . menos OPID
    (107) OPID -> . parentesisa OPID parentesisc
    (108) OPID -> . NATMATH parentesisa OPID parentesisc
    (109) OPID -> . log parentesisa OPID coma OPID parentesisc
    (110) OPID -> . int
    (111) OPID -> . flotante
    (112) OPID -> . id
    (113) OPID -> . cadena
    (114) OPID -> . caracter
    (115) SOPLOG -> . SOPLOG and SOPLOG
    (116) SOPLOG -> . SOPLOG or SOPLOG
    (117) SOPLOG -> . SOPLOG mayorque SOPLOG
    (118) SOPLOG -> . SOPLOG menorque SOPLOG
    (119) SOPLOG -> . SOPLOG mayoriwal SOPLOG
    (120) SOPLOG -> . SOPLOG menoriwal SOPLOG
    (121) SOPLOG -> . SOPLOG iwaliwal SOPLOG
    (122) SOPLOG -> . SOPLOG distintoque SOPLOG
    (123) SOPLOG -> . parentesisa SOPLOG parentesisc
    (124) SOPLOG -> . OPID
    (125) SOPLOG -> . true
    (126) SOPLOG -> . false
    (127) SOPLOG -> . int
    (128) SOPLOG -> . flotante
    (129) SOPLOG -> . cadena
    (130) SOPLOG -> . caracter
    (131) SOPLOG -> . id
    (148) NATMATH -> . log10
    (149) NATMATH -> . sin
    (150) NATMATH -> . cos
    (151) NATMATH -> . tan
    (152) NATMATH -> . sqrt

    menos           shift and go to state 43
    parentesisa     shift and go to state 13
    log             shift and go to state 45
    int             shift and go to state 37
    flotante        shift and go to state 46
    id              shift and go to state 67
    cadena          shift and go to state 68
    caracter        shift and go to state 69
    true            shift and go to state 47
    false           shift and go to state 48
    log10           shift and go to state 57
    sin             shift and go to state 58
    cos             shift and go to state 59
    tan             shift and go to state 60
    sqrt            shift and go to state 61

    OPID                           shift and go to state 65
    SOPLOG                         shift and go to state 66
    NATMATH                        shift and go to state 44

state 14

    (96) IMPRIMIR -> print . parentesisa SCONTPRNT parentesisc

    parentesisa     shift and go to state 70


state 15

    (76) FUNCIONES -> FIF .

    puntocoma       reduce using rule 76 (FUNCIONES -> FIF .)


state 16

    (77) FUNCIONES -> FWHILE .

    puntocoma       reduce using rule 77 (FUNCIONES -> FWHILE .)


state 17

    (78) FUNCIONES -> FFOR .

    puntocoma       reduce using rule 78 (FUNCIONES -> FFOR .)


state 18

    (66) SCOPE -> global . ASIGNACION
    (72) ASIGNACION -> . NOMBREALGO igual SOPSTRING
    (73) ASIGNACION -> . NOMBREALGO igual ALGO
    (74) ASIGNACION -> . NOMBREALGO igual ALGO dos_dospuntos TIPOS
    (75) ASIGNACION -> . NOMBREALGO igual nothing
    (69) NOMBREALGO -> . LLAMADARR
    (70) NOMBREALGO -> . STRUCTASIGNS
    (71) NOMBREALGO -> . id
    (53) LLAMADARR -> . id INDARS
    (47) STRUCTASIGNS -> . STRUCTASIGN punto STRUCTASIGNS
    (48) STRUCTASIGNS -> . STRUCTASIGN
    (46) STRUCTASIGN -> . id

    id              shift and go to state 72

    ASIGNACION                     shift and go to state 71
    NOMBREALGO                     shift and go to state 36
    LLAMADARR                      shift and go to state 55
    STRUCTASIGNS                   shift and go to state 56
    STRUCTASIGN                    shift and go to state 62

state 19

    (68) SCOPE -> ASIGNACION .

    puntocoma       reduce using rule 68 (SCOPE -> ASIGNACION .)


state 20

    (67) SCOPE -> local . ASIGNACION
    (72) ASIGNACION -> . NOMBREALGO igual SOPSTRING
    (73) ASIGNACION -> . NOMBREALGO igual ALGO
    (74) ASIGNACION -> . NOMBREALGO igual ALGO dos_dospuntos TIPOS
    (75) ASIGNACION -> . NOMBREALGO igual nothing
    (69) NOMBREALGO -> . LLAMADARR
    (70) NOMBREALGO -> . STRUCTASIGNS
    (71) NOMBREALGO -> . id
    (53) LLAMADARR -> . id INDARS
    (47) STRUCTASIGNS -> . STRUCTASIGN punto STRUCTASIGNS
    (48) STRUCTASIGNS -> . STRUCTASIGN
    (46) STRUCTASIGN -> . id

    id              shift and go to state 72

    ASIGNACION                     shift and go to state 73
    NOMBREALGO                     shift and go to state 36
    LLAMADARR                      shift and go to state 55
    STRUCTASIGNS                   shift and go to state 56
    STRUCTASIGN                    shift and go to state 62

state 21

    (58) DECLFUNC -> function . id parentesisa PARAMS parentesisc INSTRUCCIONES end

    id              shift and go to state 74


state 22

    (62) LLAMADAFUNC -> id . parentesisa PARAMSFUNC parentesisc
    (146) SOPSTRING -> id .
    (112) OPID -> id .
    (131) SOPLOG -> id .
    (71) NOMBREALGO -> id .
    (53) LLAMADARR -> id . INDARS
    (46) STRUCTASIGN -> id .
    (54) INDARS -> . INDAR corchetec INDARS
    (55) INDARS -> . INDAR corchetec
    (56) INDAR -> . corchetea id
    (57) INDAR -> . corchetea OPID

  ! reduce/reduce conflict for asterisco resolved using rule 112 (OPID -> id .)
  ! reduce/reduce conflict for elevado resolved using rule 112 (OPID -> id .)
  ! reduce/reduce conflict for puntocoma resolved using rule 112 (OPID -> id .)
  ! reduce/reduce conflict for and resolved using rule 112 (OPID -> id .)
  ! reduce/reduce conflict for or resolved using rule 112 (OPID -> id .)
  ! reduce/reduce conflict for mayorque resolved using rule 112 (OPID -> id .)
  ! reduce/reduce conflict for menorque resolved using rule 112 (OPID -> id .)
  ! reduce/reduce conflict for mayoriwal resolved using rule 112 (OPID -> id .)
  ! reduce/reduce conflict for menoriwal resolved using rule 112 (OPID -> id .)
  ! reduce/reduce conflict for iwaliwal resolved using rule 112 (OPID -> id .)
  ! reduce/reduce conflict for distintoque resolved using rule 112 (OPID -> id .)
  ! reduce/reduce conflict for puntocoma resolved using rule 112 (OPID -> id .)
  ! reduce/reduce conflict for igual resolved using rule 46 (STRUCTASIGN -> id .)
    parentesisa     shift and go to state 75
    mas             reduce using rule 112 (OPID -> id .)
    menos           reduce using rule 112 (OPID -> id .)
    asterisco       reduce using rule 112 (OPID -> id .)
    dividido        reduce using rule 112 (OPID -> id .)
    modulo          reduce using rule 112 (OPID -> id .)
    elevado         reduce using rule 112 (OPID -> id .)
    puntocoma       reduce using rule 112 (OPID -> id .)
    and             reduce using rule 112 (OPID -> id .)
    or              reduce using rule 112 (OPID -> id .)
    mayorque        reduce using rule 112 (OPID -> id .)
    menorque        reduce using rule 112 (OPID -> id .)
    mayoriwal       reduce using rule 112 (OPID -> id .)
    menoriwal       reduce using rule 112 (OPID -> id .)
    iwaliwal        reduce using rule 112 (OPID -> id .)
    distintoque     reduce using rule 112 (OPID -> id .)
    punto           reduce using rule 46 (STRUCTASIGN -> id .)
    igual           reduce using rule 46 (STRUCTASIGN -> id .)
    corchetea       shift and go to state 78

  ! asterisco       [ reduce using rule 146 (SOPSTRING -> id .) ]
  ! elevado         [ reduce using rule 146 (SOPSTRING -> id .) ]
  ! puntocoma       [ reduce using rule 146 (SOPSTRING -> id .) ]
  ! and             [ reduce using rule 131 (SOPLOG -> id .) ]
  ! or              [ reduce using rule 131 (SOPLOG -> id .) ]
  ! mayorque        [ reduce using rule 131 (SOPLOG -> id .) ]
  ! menorque        [ reduce using rule 131 (SOPLOG -> id .) ]
  ! mayoriwal       [ reduce using rule 131 (SOPLOG -> id .) ]
  ! menoriwal       [ reduce using rule 131 (SOPLOG -> id .) ]
  ! iwaliwal        [ reduce using rule 131 (SOPLOG -> id .) ]
  ! distintoque     [ reduce using rule 131 (SOPLOG -> id .) ]
  ! puntocoma       [ reduce using rule 131 (SOPLOG -> id .) ]
  ! igual           [ reduce using rule 71 (NOMBREALGO -> id .) ]

    INDARS                         shift and go to state 76
    INDAR                          shift and go to state 77

state 23

    (79) TRANSF -> break .

    puntocoma       reduce using rule 79 (TRANSF -> break .)


state 24

    (80) TRANSF -> continue .

    puntocoma       reduce using rule 80 (TRANSF -> continue .)


state 25
